// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Kusama Nomination Pools > nomination pool creation with insufficient funds > create nomination pool with insufficient funds events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x08000000",
          "index": 41,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 13000)",
          "refTime": "(rounded 3700000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool double join test: an account can only ever be in one pool at a time > join nomination pool events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 1700000000)",
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": {
      "bonded": "(rounded 1700000000)",
      "joined": true,
      "member": "HnMAUz7r2G8G3hB27SYNyit5aJmh2a5P4eMdDtACtMFDbam",
    },
    "method": "Bonded",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool double join test: an account can only ever be in one pool at a time > join second nomination pool events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x04000000",
          "index": 41,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 16000)",
          "refTime": "(rounded 2900000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool global config test > setting global nomination pool configs with signed origin 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 7200)",
          "refTime": "(rounded 1100000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool global config test > system events 1`] = `
[
  {
    "data": {
      "globalMaxCommission": "10.00%",
      "maxMembers": 2,
      "maxMembersPerPool": 2,
      "maxPools": 2,
      "minCreateBond": "(rounded 1000000000000)",
      "minJoinBond": "(rounded 1700000000)",
    },
    "method": "GlobalParamsUpdated",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool global config test > system events 2`] = `
[
  {
    "data": {
      "globalMaxCommission": "10.00%",
      "maxMembers": 3,
      "maxMembersPerPool": 3,
      "maxPools": 3,
      "minCreateBond": "(rounded 1000000000000)",
      "minJoinBond": "(rounded 1700000000)",
    },
    "method": "GlobalParamsUpdated",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool lifecycle test > bond extra funds events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 1700000000)",
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": {
      "bonded": "(rounded 1700000000)",
      "joined": false,
      "member": "HnMAUz7r2G8G3hB27SYNyit5aJmh2a5P4eMdDtACtMFDbam",
    },
    "method": "Bonded",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool lifecycle test > chill events 1`] = `
[
  {
    "data": {},
    "method": "Chilled",
    "section": "staking",
  },
  {
    "data": {
      "caller": "Fr4NzY1udSFFLzb2R3qxVQkwz9cZraWkyfH4h3mVVk7BK7P",
    },
    "method": "PoolNominatorChilled",
    "section": "nominationPools",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 12000)",
          "refTime": "(rounded 1400000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool lifecycle test > claim commission events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x1a000000",
          "index": 41,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 13000)",
          "refTime": "(rounded 940000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool lifecycle test > commission alteration events 1`] = `
[
  {
    "data": {
      "current": [
        "0.10%",
        "HnMAUz7r2G8G3hB27SYNyit5aJmh2a5P4eMdDtACtMFDbam",
      ],
    },
    "method": "PoolCommissionUpdated",
    "section": "nominationPools",
  },
  {
    "data": {
      "maxCommission": "1.00%",
    },
    "method": "PoolMaxCommissionUpdated",
    "section": "nominationPools",
  },
  {
    "data": {
      "changeRate": {
        "maxIncrease": "100.00%",
        "minDelay": 10,
      },
    },
    "method": "PoolCommissionChangeRateUpdated",
    "section": "nominationPools",
  },
  {
    "data": {
      "permission": "Permissionless",
    },
    "method": "PoolCommissionClaimPermissionUpdated",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool lifecycle test > create nomination pool events 1`] = `
[
  {
    "data": {
      "amount": 1000000000000,
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": {
      "depositor": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
    },
    "method": "Created",
    "section": "nominationPools",
  },
  {
    "data": {
      "bonded": 1000000000000,
      "joined": true,
      "member": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
    },
    "method": "Bonded",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool lifecycle test > join nomination pool events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 1700000000)",
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": {
      "bonded": "(rounded 1700000000)",
      "joined": true,
      "member": "HnMAUz7r2G8G3hB27SYNyit5aJmh2a5P4eMdDtACtMFDbam",
    },
    "method": "Bonded",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool lifecycle test > nomination pool validator selection events 1`] = `
[
  {
    "data": {
      "caller": "Fr4NzY1udSFFLzb2R3qxVQkwz9cZraWkyfH4h3mVVk7BK7P",
    },
    "method": "PoolNominationMade",
    "section": "nominationPools",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 52000)",
          "refTime": "(rounded 2000000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool lifecycle test > set state events 1`] = `
[
  {
    "data": {
      "newState": "Blocked",
    },
    "method": "StateChanged",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool lifecycle test > set state to destroying events 1`] = `
[
  {
    "data": {
      "newState": "Destroying",
    },
    "method": "StateChanged",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool lifecycle test > unbond (depositor) events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x08000000",
          "index": 41,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 16000)",
          "refTime": "(rounded 2300000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool lifecycle test > unbond (kick) events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 1700000000)",
    },
    "method": "Unbonded",
    "section": "staking",
  },
  {
    "data": {
      "balance": "(rounded 1700000000)",
      "member": "HnMAUz7r2G8G3hB27SYNyit5aJmh2a5P4eMdDtACtMFDbam",
      "points": "(rounded 1700000000)",
    },
    "method": "Unbonded",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool lifecycle test > unbond events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 1700000000)",
    },
    "method": "Unbonded",
    "section": "staking",
  },
  {
    "data": {
      "balance": "(rounded 1700000000)",
      "member": "HnMAUz7r2G8G3hB27SYNyit5aJmh2a5P4eMdDtACtMFDbam",
      "points": "(rounded 1700000000)",
    },
    "method": "Unbonded",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool lifecycle test > update roles events 1`] = `
[
  {
    "data": {
      "bouncer": "DfnTB4z7eUvYRqcGtTpFsLC69o6tvBSC1pEv8vWPZFtCkaK",
      "nominator": "Fr4NzY1udSFFLzb2R3qxVQkwz9cZraWkyfH4h3mVVk7BK7P",
      "root": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
    },
    "method": "RolesUpdated",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool metadata test > create nomination pool events 1`] = `
[
  {
    "data": {
      "amount": 1000000000000,
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": {
      "depositor": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
    },
    "method": "Created",
    "section": "nominationPools",
  },
  {
    "data": {
      "bonded": 1000000000000,
      "joined": true,
      "member": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
    },
    "method": "Bonded",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool metadata test > set metadata events 1`] = `
[
  {
    "data": {
      "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
    },
    "method": "MetadataUpdated",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pools update roles test > update pool roles via scheduler pallet 1`] = `
[
  {
    "event": {
      "data": [
        "Fr4NzY1udSFFLzb2R3qxVQkwz9cZraWkyfH4h3mVVk7BK7P",
        "HnMAUz7r2G8G3hB27SYNyit5aJmh2a5P4eMdDtACtMFDbam",
        "DfnTB4z7eUvYRqcGtTpFsLC69o6tvBSC1pEv8vWPZFtCkaK",
      ],
      "index": "0x2908",
    },
    "phase": {
      "initialization": null,
    },
    "topics": [],
  },
]
`;

exports[`Kusama Nomination Pools > nomination pools update roles test > update roles events 1`] = `
[
  {
    "data": {
      "bouncer": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "nominator": "DfnTB4z7eUvYRqcGtTpFsLC69o6tvBSC1pEv8vWPZFtCkaK",
      "root": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
    },
    "method": "RolesUpdated",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pools update roles test > update roles failure events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x11000000",
          "index": 41,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 11000)",
          "refTime": "(rounded 690000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pools update roles test > update roles remove self events 1`] = `
[
  {
    "data": {
      "bouncer": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "nominator": "DfnTB4z7eUvYRqcGtTpFsLC69o6tvBSC1pEv8vWPZFtCkaK",
      "root": null,
    },
    "method": "RolesUpdated",
    "section": "nominationPools",
  },
]
`;
